--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "atmofit",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "homepage":"./",
+  "main": "index.html",
   "scripts": {
     "start": "cross-env PORT=10888 react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "predeploy":"npm run build",
+      "deploy":"gh-pages -d build"
   },
   "keywords": [],
   "author": "",
