--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "atmofit",
   "version": "1.0.0",
   "description": "",
-  "homepage":"src/index.js",
+  "homepage":"./",
   "main": "index.js",
   "scripts": {
     "start": "cross-env PORT=10888 react-scripts start",
